--- a/test-source/webpage/templates/index.html
+++ b/test-source/webpage/templates/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Image Display</title>
+    <title>img page</title>
   </head>
   <body>
     <img
-      src="{{ url_for('static', filename='image1.jpeg') }}"
+      src="{{ url_for('static', filename='01234123412342134.jpg') }}"
       style="width: 300px"
     />
     <div class="test">
       <img
-        src="{{ url_for('static', filename='image3.jpeg') }}"
+        src="{{ url_for('static', filename='3123412341234123.jpeg') }}"
         alt="Smoke is coming from the chimney based on the clear sky."
         style="width: 300px"
       />
@@ -19,7 +19,7 @@
       <div>
         <h1>Hello!</h1>
         <img
-          src="{{ url_for('static', filename='image2.jpeg') }}"
+          src="{{ url_for('static', filename='4123412341123412.jpeg') }}"
           style="width: 300px"
         />
       </div>
