--- a/test-source/webpage/templates/index.html
+++ b/test-source/webpage/templates/index.html
@@ -10,15 +10,19 @@
       src="{{ url_for('static', filename='01234123412342134.jpg') }}"
       style="width: 300px"
     />
-    <p>img without alt</p>
+    <p>this is music album cover img. song name is '155347'.</p>
     <br /><br /><br />
     <div class="test">
-      <img
+      <!-- <img
         src="{{ url_for('static', filename='3123412341234123.jpeg') }}"
         alt="Smoke is coming from the chimney based on the clear sky."
         style="width: 300px"
+      /> -->
+      <img
+        src="{{ url_for('static', filename='3123412341234123.jpeg') }}"
+        style="width: 300px"
       />
-      <p>img with alt</p>
+      <p>very clear day.</p>
       <br /><br /><br />
     </div>
     <div>
@@ -27,7 +31,7 @@
           src="{{ url_for('static', filename='4123412341123412.jpeg') }}"
           style="width: 300px"
         />
-        <p>img without alt</p>
+        <p>i went to the mountain yesterday</p>
         <br /><br /><br />
       </div>
     </div>
