🍱 add person img

--- a/test-source/webpage/templates/index.html
+++ b/test-source/webpage/templates/index.html
@@ -11,6 +11,7 @@
       style="width: 300px"
     />
     <p>this is music album cover img. album name is '155347' by frxgxd</p>
+    <p>it's very very happy music</p>
     <br /><br /><br />
     <div class="test">
       <img
@@ -18,6 +19,14 @@
         style="width: 300px"
       />
       <p>very clear day.</p>
+      <br /><br /><br />
+    </div>
+    <div class="test">
+      <img
+        src="{{ url_for('static', filename='Untitled.jpeg') }}"
+        style="width: 300px"
+      />
+      <p>i'm very happy</p>
       <br /><br /><br />
     </div>
     <div>
