🍱 add multi req test page

--- a/test-source/webpage/templates/index2.html
+++ b/test-source/webpage/templates/index2.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>website with imgs</h1>
+    <h3>page 2</h3>
 
     <img
       src="{{ url_for('static', filename='01234123412342134.jpg') }}"
@@ -13,14 +14,14 @@
     <p>this is music album cover img. album name is '155347' by frxgxd</p>
     <p>it's very very happy music</p>
     <br /><br /><br />
-    <div class="test">
+    <!-- <div class="test">
       <img
         src="{{ url_for('static', filename='3123412341234123.jpeg') }}"
         style="width: 300px"
       />
       <p>very clear day.</p>
       <br /><br /><br />
-    </div>
+    </div> -->
     <div class="test">
       <img
         src="{{ url_for('static', filename='Untitled.jpeg') }}"
@@ -29,14 +30,14 @@
       <p>i'm very happy</p>
       <br /><br /><br />
     </div>
-    <div class="test">
+    <!-- <div class="test">
       <img
         src="{{ url_for('static', filename='R800x0-1944572191.jpeg') }}"
         style="width: 300px"
       />
       <p>this is Ancient Hangul</p>
       <br /><br /><br />
-    </div>
+    </div> -->
     <div>
       <div>
         <img
