--- a/test-source/webpage/templates/index1.html
+++ b/test-source/webpage/templates/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>img page</title>
+    <title>Musium</title>
   </head>
   <body>
     <h1>website with imgs</h1>
